# Cataclysm-DDA-I18N

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  action.cpp  addiction.h  artifact.cpp  artifactdata.cpp  artifactdata.h  basecamp.cpp  bionics.cpp  bionics.h  bionics_data.cpp  bodypart.cpp  calendar.cpp  calendar.h  catacurse.cpp  cfgxx.h  computer.cpp  construction.cpp  crafting.cpp  defense.cpp  dialogue.cpp  dialogue.h  disease.cpp  event.cpp  facdata.cpp  facdata.h  faction.cpp  field.cpp  game.cpp  gamemode.cpp  help.cpp  i18n.cpp  i18n.h  inventory_ui.cpp  inventory_ui.h  inventory_ui_data.cpp  item.cpp  itypedef.cpp  (+51 more)
data/: FONTDATA  i18n.ini
lang/: cataclysm.pot
scripts/: msgfmt.sh  msginit.sh  msgmerge.sh
